--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <h2>Contador de visitas:</h2>
 
-<img src="https://hitwebcounter.com/counter/counter.php?page=UNIQUEID&style=0006&nbdigits=5&type=page&initCount=0" />
+<img src="https://visitor-badge.laobi.icu/badge?page_id=rogeliorojas1622-arch.Proyect-random" />
 
 </body>
 
 </html>
+
