--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Mensaje</title>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+<title>Mensaje</title>
+
+<style>
+
+body{
+    margin:0;
+    height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    font-family: 'Segoe UI', Arial, sans-serif;
+    color:white;
+}
+
+.card{
+    background: rgba(255,255,255,0.08);
+    padding:40px;
+    border-radius:15px;
+    text-align:center;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    backdrop-filter: blur(10px);
+}
+
+h1{
+    font-weight:300;
+    margin-bottom:10px;
+}
+
+h2{
+    font-weight:200;
+    margin-bottom:30px;
+    opacity:0.9;
+}
+
+.counter{
+    margin-top:20px;
+    font-size:14px;
+    opacity:0.8;
+}
+
+</style>
+
 </head>
-<body style="text-align:center; font-family:Arial; margin-top:50px;">
 
-<h1>Sabía que leías lo que enviaba, por cierto, te amo ;)</h1>
+<body>
 
-<h2>Contador de visitas:</h2>
+<div class="card">
 
-<img src="https://visitor-badge.laobi.icu/badge?page_id=rogeliorojas1622-arch.Proyect-random" />
+<h1>Sabía que leías lo que enviaba</h1>
+<h2>por cierto, te amo ;)</h2>
+
+<div class="counter">
+
+<img src="https://api.visitorbadge.io/api/visitors?path=rogeliorojas1622-arch-Proyect-random&label=Visitas&countColor=%23007ec6&style=flat" />
+
+</div>
+
+</div>
 
 </body>
-
 </html>
 
